--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -66,11 +66,11 @@
     tbody tr td,
     tfoot tr td {padding: $table-cell-padding;}
     thead tr th {
-                @include basic-th (700,#000,#d8deea);
+                @include basic-th (700,$tbl-ft-color,#d8deea);
                 border: $border-default;
 ;               }
     tbody tr td {
-                @include basic-td (700,#000,16px);
+                @include basic-td (700,$tbl-ft-color,16px);
                 border: $border-default;
               }
     tr:hover {
@@ -83,11 +83,11 @@
 .table-body-only {
                   @include border('top', 2px, solid, #2b2b2b);
                   tbody th {
-                            @include body-tblbasic-th (700,#000,#d8deea);
+                            @include body-tblbasic-th (700,$tbl-ft-color,#d8deea);
                             border: $border-default;
                           }
                   tbody td {
-                          @include body-tblbasic-td (700,#000,#d8deea);          
+                          @include body-tblbasic-td (700,$tbl-ft-color,#d8deea);          
                           border: $border-default;          
                         }
                 }
@@ -95,12 +95,12 @@
 /* 폼 */
 .from-common {width:100%;height:100%;text-indent: 10px;}
 .form-wrap {display:inline-block;}
-.input-wrap {display:inline-block;width:45%;height:$fm-height;border: $border-default;
+.input-wrap {display:inline-block;width:45%;height:$fm-height;line-height:$fm-height;border: $border-default;
   .input-text {
     @extend .from-common;
   }
 }
-.select-wrap {display:inline-block;width:45%;height:$fm-height;border: $border-default;
+.select-wrap {display:inline-block;width:45%;height:$fm-height;line-height:$fm-height;border: $border-default;
   .input-select {
     @extend .from-common;
     @include bgimage(arrow);
