--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,6 +12,7 @@ $main-linkcolor: #666;
 $main-linkcolor-hover:#008cba;
 $main-linkcolor-active:#008cba;
 
+$default-color: #666;
 $point-color: #ff0000;
 $primary-color: #008cba;
 
@@ -24,7 +25,8 @@ $bx-padding:30px;
 
 //폼
 $fm-height: 40px;
-$fm-bgcolor : #fff;
+$fm-bgcolor :#fff;
+$fm-border :#ccc;
  
 // 컬러 
 $color-basic: #333;
@@ -38,27 +40,25 @@ $color-danger: #d45704;
 $color-error: #ff0000;
 $color-info: #949494;
  
+$border-color:#000;
 
-
-//미디어 쿼리 설정
-$media-notebook: 1239px;
-$media-tablet: 1024px;
-$media-mobiedefault: 768px;
 
 //폰트 사이즈
 $font-size-base:          16px;
-$font-size-large:         ceil(($font-size-base * 1.25)); // ~18px
-$font-size-small:         ceil(($font-size-base * 0.85)); // ~12px
+$font-size-large:         ceil(($font-size-base * 1.25)); 
+$font-size-small:         ceil(($font-size-base * 0.85)); 
 
-$font-size-h1:            floor(($font-size-base * 2.8)); // ~36px
-$font-size-h2:            floor(($font-size-base * 2.3)); // ~30px
-$font-size-h3:            ceil(($font-size-base * 2)); // ~24px
-$font-size-h4:            ceil(($font-size-base * 1.75)); // ~18px
+$font-size-h1:            floor(($font-size-base * 2.8)); 
+$font-size-h2:            floor(($font-size-base * 2.3)); 
+$font-size-h3:            ceil(($font-size-base * 2)); 
+$font-size-h4:            ceil(($font-size-base * 1.75)); 
 $font-size-h5:            $font-size-base;
-$font-size-h6:            ceil(($font-size-base * 0.85)); // ~12px
+$font-size-h6:            ceil(($font-size-base * 0.85)); 
+
+
+$default-line-height: 20px;
 
 //border
-
 $border-default: 1px solid #ccc;
 $page-border: 1px solid #ccc;
 $page-border-active: 1px solid #ccc;
@@ -70,9 +70,15 @@ $boardthcolor : #1d262d;
 //table 
 $table-cell-padding: 10px 5px;
 $tbl-hover-color:#333;
+$board-thline : 1px solid #e1e1e1;
 $board-tdline : 1px solid #e1e1e1;
 $trhover : #f7f8fe;
+$tbl-hover-color: #fff;
+$tbl-ft-color:#666;
 
+//boarder 
+$default-bordertop: 2px solid $border-color;
+$bordertop-light: 1px solid $border-color;
 
 
 $known-prefixes: webkit, moz, ms, o;
