--- a/scss/itg.scss
+++ b/scss/itg.scss
@@ -2,6 +2,7 @@
 @import "_variables";
 @import "_mixin";
 /*공통요소 폼,테이블기본,버튼 */
+@import "_button";
 @import "_common";
 /* 게시판 유형 */
 @import "_board";
